<resources>
    <string name="app_name">LoginLinearLayout</string>
    <string name="tvSignIn">Sign In</string>
    <string name="tvUser">User Name/ e mail address</string>
    <string name="tvPassword">Password</string>
    <string name="cbRemember">Remember me</string>
    <string name="tvSignUp"><u>Sign Up</u></string>
    <string name="btnGoogleSign">Google</string>
    <string name="btnFacebookSign">Log in with Facebook</string>
    <string name="btnSignUp"><u>Sign Up</u></string>
</resources>
