<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.loginlinearlayout.LoginActivity"
    android:orientation="vertical"
    android:padding="@dimen/ll_login_padding"
    android:background="@color/colorPrimary">
    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSignIn"
        android:layout_marginBottom="@dimen/tvSignIn_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"/>
    <TextView
        android:id="@+id/tvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvUser"
        android:labelFor="@+id/etUser"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
        />
    <EditText
        android:id="@+id/etUser"
        android:background="@drawable/shape_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        style="@style/LoginEditText"/>
    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPassword"
        android:labelFor="@+id/etPassword"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
        />
    <EditText
        android:id="@+id/etPassword"
        android:background="@drawable/shape_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/LoginEditText"/>
    <LinearLayout
        android:id="@+id/llSignOpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ll_sign_options_padding"
        >
        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cbRemember"
            android:checked="true"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:theme="@style/LoginCheckBox"
            />
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvSignUp"
            android:gravity="right"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"/>
    </LinearLayout>
    <Button
        android:layout_gravity="center_horizontal"
        style="@style/Widget.Button.Transparent"
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btnSignIn_margin"
        android:background="@color/colorFacebook"
        android:text="@string/tvSignIn"/>

    <Button
        android:id="@+id/btnGoogleSign"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ll_sign_options_padding"
        android:background="@color/colorGoogle"
        android:drawableStart="@drawable/google"
        android:text="@string/btnGoogleSign" />

    <Button
        android:id="@+id/btnFacebookSign"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFacebook"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/btnFacebookSign" />
</LinearLayout>
